src/html/styles.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: 'Trebuchet MS', sans-serif;
}

button, input, select, option {
    background-color: rgba(0, 0, 0, 0);
    color: inherit;
    font-family: inherit;
}

option {
    color: #000;
}

/* bars */

.bar {
    width: 100%;
    background-color: #AAA;
    display: grid;
    grid-template-columns: 1fr min-content min-content min-content min-content;
}

.bar-tile {
    display: inline-flex;
    height: 32px;
    margin: 8px;
    padding: 4px;
    border: 2px solid #000;
    align-items: center;
    user-select: none;
    cursor: pointer;
    white-space: nowrap;
    font-size: 16px;
}

#connection-indicator {
    height: 8px;
    width: 8px;
    border-radius: 50%;
    margin: auto;
    margin-right: 6px;
}
.online {
    background-color: #6F6;
}
.offline {
    background-color: #F66;
}

/* rooms */

#rooms {
    display: inline-block;
    overflow-x: auto;
    height: 100%;
    white-space: nowrap;
}

.room-name {
    display: inline-block;
    max-width: 96px;
    overflow: hidden;
    text-overflow: ellipsis;
}
.room.selected .room-name {
    text-decoration: underline;
}
.room.unread .room-name {
    text-shadow: 0.5px 0px currentColor, -0.5px 0px currentColor;
}

.exit-room {
    border: 2px solid #000;
    display: inline-block;
    height: 20px;
    width: 20px;
    font-size: 12px;
    text-align: center;
    user-select: none;
    margin-left: 8px;
    cursor: pointer;
}

/* messages */

#message-input-container {
    height: calc(100vh - 48px);
    display: grid;
    grid-template-rows: 1fr min-content;
}

#messages {
    width: 100%;
    padding: 4px 8px;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}
#messages > :first-child {
    margin-top: auto;
}
.message {
    padding: 8px 0px;
    font-size: 20px;
    width: 100%;
    display: grid;
    grid-template-columns: max-content max-content 1fr;
    overflow-wrap: break-word;
    white-space: pre-wrap;
}
.message > * {
    vertical-align: top;
    display: inline-block;
    overflow: hidden;
}
.server-content {
    color: #555;
    font-style: italic;
}
.sender {
    font-weight: bold;
}

/* input bar */

#input {
    cursor: text;
    display: inline-block;
    min-height: 32px;
    max-height: 96px;
    height: max-content;
    overflow: scroll;
    overflow-wrap: break-word;
    white-space: pre-wrap;
}
#input:focus {
    outline: none;
}
#send {
    cursor: pointer;
}

